...
        return label
    }()

    lazy var actionButton: StytchActionButton = {
        let button = StytchActionButton(customization: StytchMagicLinkUI.shared.customization)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Continue".localized, for: .normal)
        button.addTarget(self, action: #selector(handleActionButton), for: .touchUpInside)
        return button
    }()

    var poweredView: StytchPoweredView = {
        let view = StytchPoweredView(customization: StytchMagicLinkUI.shared.customization)
...
